tests/snapshots/parser_error_fixtures/missing_effect_after_plus.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_effect_after_plus.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Expected effect name after effect operator.

  examples/parser_errors/missing_effect_after_plus.flx:1:28
  |
1 | fn main() -> Int with IO + {
  |                            ^

Hint:
  Effect expressions use `Left + Right`, `Left - Right`, and optional `| e` tails.

Note:
  while parsing function `main`
== stdout ==
<not executed>
