tests/snapshots/parser_error_fixtures/missing_effect_name_after_with.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_effect_name_after_with.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Unexpected Token

Expected effect name after in effect expression. 

  examples/parser_errors/missing_effect_name_after_with.flx:1:23
  |
1 | fn main() -> Int with {
  |                       ^

Hint:
  Effect expressions use names like `IO`, `IO + Net`, or `|e`.

Note:
  while parsing function `main`
== stdout ==
<not executed>
