tests/snapshots/parser_error_fixtures/missing_hash_colon.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_hash_colon.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Hash Colon

This hash entry needs `:` between the key and value.

  examples/parser_errors/missing_hash_colon.flx:2:19
  |
2 |     let h = { "a" 1 }
  |                   ^

Hint:
  Hash literals use `{key: value, ...}`.

Note:
  while parsing function `main`
== stdout ==
<not executed>
