tests/snapshots/parser_error_fixtures/missing_if_brace.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_if_brace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing If Body

This `if` branch needs to start with `{`.

  examples/parser_errors/missing_if_brace.flx:8:12
  |
8 |     if x > 3
  |            ^
  |            - this `if` branch starts here

Note:
  while parsing function `main` > `if` expression

Help:
  Try adding `{` after the `if` condition.
== stdout ==
<not executed>
