tests/snapshots/parser_error_fixtures/missing_match_arrow.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_match_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Match Arm Arrow

I was expecting `->` in this match arm, but I found a string literal.

  examples/parser_errors/missing_match_arrow.flx:9:11
  |
9 |         1 "one",
  |           ^^^^^

Help:
  Write match arms as `match x { pattern -> body, ... }`.
== stdout ==
<not executed>
