tests/snapshots/parser_error_fixtures/missing_match_brace.snap
---
source: tests/error_fixtures/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_match_brace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Match Body

Expected `{` to begin match arms.

  examples/parser_errors/missing_match_brace.flx:8:9
  |
8 |         1 -> "one",
  |         ^

Hint:
  Match expressions use `match value { pattern -> body, ... }`.

Note:
  while parsing function `main` > `match` expression
== stdout ==
<not executed>
