tests/snapshots/parser_error_fixtures/missing_module_brace.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_module_brace.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E034]: Missing Module Body

This module body needs to start with `{`.

  examples/parser_errors/missing_module_brace.flx:6:5
  |
6 |     pub fn add(a: Int, b: Int) -> Int { a + b }
  |     ^^^

Hint:
  Module declarations use `module Name { ... }`.
== stdout ==
<not executed>
